@@ -126,6 +126,7 @@ Here's a list of the inputs and options which can be specifed in the config file
       PlotOptions      -> a set os options for plotting:
         YIELDS : if set, the legend will be one-column and will include the yileds; otherwise two-columns and no yields
       CorrelationThreshold -> Threshold used to draw the correaltion matrix (only systematics with at least one correlation larger than than draw) (0.05->5%)
+      HistoChecks      -> NOCRASH: means that if an error is found in the input histograms, the code continues (with only warnings) -- default leads to a crash in case of problem
       ...
       
     Sample:
